# ClassicSearch

./: .gitignore  CMakeLists.txt  ProblemSolver.cpp  ProblemSolver.h  README  main.cpp  project.config
core/: Problem.cpp  Problem.h  Search.cpp  Search.h  State.cpp  State.h
problems/: ProblemNavigation.cpp  ProblemNavigation.h  ProblemPuzzle.cpp  ProblemPuzzle.h  ProblemWater.cpp  ProblemWater.h  problems.h
search/: SearchAStar.cpp  SearchAStar.h  SearchBFS.cpp  SearchBFS.h  SearchBidirect.cpp  SearchBidirect.h  SearchDFS.cpp  SearchDFS.h  SearchDFSL.cpp  SearchDFSL.h  SearchDFSX.cpp  SearchDFSX.h  SearchUCS.cpp  SearchUCS.h  searches.h
